fix alignement for footer

--- a/TCLibrary/src/css/style.scss
+++ b/TCLibrary/src/css/style.scss
@@ -1,5 +1,5 @@
-﻿footer {
-        position: relative;
+footer {
+        position: fixed;
         bottom: 0;
         height: auto;
         width: 100%;
